# slinDex

./: Cargo.toml  README.md  build.rs
data/: pokemon.csv
data/data scripts/pokemon-spreadsheet-generator/src/: main.py  pokemon_planilha.json
src/: helpers.rs  lib.rs  main.rs  service.rs
ui/: app.slint
web/: index.html
web/pkg/: README.md  package.json  slindex.d.ts  slindex.js  slindex_bg.wasm.d.ts  slint_pokedex.d.ts  slint_pokedex.js  slint_pokedex_bg.wasm.d.ts
