[package]
name = "slindex"
version = "1.0.7"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "slindex_app"
path = "src/main.rs"

[dependencies]
slint = { version = "1.12", features = [
    "std",                 # reabilita std (resolve o 'Box' etc.)
    "compat-1-2",
    ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
lru = "0.16"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(target_os = "android")'.dependencies]
slint = { version = "1.12", default-features = false, features = ["backend-android-activity-06"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.47", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[build-dependencies]
slint-build = "1.12"
winres = "0.1"

[package.metadata.android]
package = "com.seuapp.slindex"
apk_name = "SlinDex"
# API 26+ é um bom mínimo hoje
min_sdk_version = 26
target_sdk_version = 34
resources  = "android/res"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[package.metadata.android.application]
label = "SlinDex"
icon  = "@mipmap/ic_launcher"
